--- a/faq.html
+++ b/faq.html
@@ -101,7 +101,7 @@ nav .container { display: flex; align-items: center; justify-content: space-betw
 .mobile-toggle span { width: 24px; height: 2px; background: var(--text-primary); border-radius: 2px; transition: all 0.3s; }
 
 /* === SECTION STYLES === */
-section { position: relative; z-index: 1; padding: 64px 0; }
+section { position: relative; z-index: 1; padding: 40px 0; }
 
 .section-label {
   display: inline-flex; align-items: center; gap: 8px;
@@ -112,30 +112,30 @@ section { position: relative; z-index: 1; padding: 64px 0; }
 .section-label::before { content: ''; width: 24px; height: 1px; background: var(--accent-1); }
 
 .section-title {
-  font-family: var(--font-display); font-size: clamp(2rem, 3.5vw, 3rem);
+  font-family: var(--font-display); font-size: clamp(1.8rem, 2.8vw, 2.4rem);
   font-weight: 800; letter-spacing: -0.03em; line-height: 1.12; margin-bottom: 20px;
 }
 
-.section-desc { font-size: 1.05rem; color: var(--text-secondary); max-width: 600px; line-height: 1.75; }
+.section-desc { font-size: 1.05rem; color: var(--text-secondary); max-width: 800px; line-height: 1.75; }
 
 /* === PAGE HERO (subpages) === */
-.page-hero { position: relative; z-index: 1; min-height: auto; display: flex; align-items: center; padding: 140px 0 48px; }
+.page-hero { position: relative; z-index: 1; min-height: auto; display: flex; align-items: center; padding: 120px 0 32px; }
 .page-hero.centered { text-align: center; }
 .page-hero.centered .section-label { justify-content: center; }
 .page-hero.centered .section-desc { margin-left: auto; margin-right: auto; }
 .page-hero h1 { font-family: var(--font-display); font-size: clamp(2.4rem, 5vw, 3.8rem); font-weight: 800; line-height: 1.1; letter-spacing: -0.035em; margin-bottom: 24px; }
-.page-hero .hero-desc { font-size: 1.1rem; color: var(--text-secondary); line-height: 1.75; max-width: 640px; margin-bottom: 40px; }
+.page-hero .hero-desc { font-size: 1.1rem; color: var(--text-secondary); line-height: 1.75; max-width: 800px; margin-bottom: 40px; }
 
 /* === HERO (homepage) === */
-.hero { position: relative; z-index: 1; min-height: auto; display: flex; align-items: center; padding: 130px 0 48px; }
-.hero-inner { display: grid; grid-template-columns: 1fr 1fr; gap: 80px; align-items: center; }
+.hero { position: relative; z-index: 1; min-height: auto; display: flex; align-items: center; padding: 120px 0 32px; }
+.hero-inner { display: grid; grid-template-columns: 1.4fr 0.6fr; gap: 48px; align-items: center; }
 .hero-badge { display: inline-flex; align-items: center; gap: 8px; padding: 6px 16px 6px 8px; background: rgba(79,143,255,0.08); border: 1px solid rgba(79,143,255,0.15); border-radius: 50px; font-size: 0.78rem; font-weight: 600; color: var(--accent-1); margin-bottom: 28px; letter-spacing: 0.03em; }
 .hero-badge .dot { width: 8px; height: 8px; border-radius: 50%; background: var(--accent-2); animation: pulse 2s ease-in-out infinite; }
 @keyframes pulse { 0%, 100% { opacity: 1; transform: scale(1); } 50% { opacity: 0.5; transform: scale(0.8); } }
-.hero h1 { font-family: var(--font-display); font-size: clamp(2.8rem, 5vw, 4.2rem); font-weight: 800; line-height: 1.08; letter-spacing: -0.035em; margin-bottom: 24px; }
-.hero p { font-size: 1.12rem; color: var(--text-secondary); line-height: 1.75; margin-bottom: 40px; max-width: 520px; }
+.hero h1 { font-family: var(--font-display); font-size: clamp(2.2rem, 3.5vw, 2.8rem); font-weight: 800; line-height: 1.08; letter-spacing: -0.035em; margin-bottom: 24px; }
+.hero p { font-size: 1.12rem; color: var(--text-secondary); line-height: 1.75; margin-bottom: 32px; max-width: 640px; }
 .hero-cta { display: flex; align-items: center; gap: 16px; flex-wrap: wrap; }
-.hero-rating { display: flex; align-items: center; gap: 12px; margin-top: 40px; padding-top: 32px; border-top: 1px solid var(--border); }
+.hero-rating { display: flex; align-items: center; gap: 12px; margin-top: 28px; padding-top: 32px; border-top: 1px solid var(--border); }
 .stars { color: #fbbf24; font-size: 1.1rem; letter-spacing: 2px; }
 .hero-rating span { font-size: 0.82rem; color: var(--text-muted); }
 .hero-visual { position: relative; display: flex; justify-content: center; }
@@ -177,7 +177,7 @@ section { position: relative; z-index: 1; padding: 64px 0; }
 @keyframes scroll { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
 
 /* === STEP CARDS === */
-.steps-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 24px; margin-top: 64px; }
+.steps-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 20px; margin-top: 28px; }
 .step-card { padding: 40px 32px; background: var(--bg-card); border: 1px solid var(--border); border-radius: 20px; transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1); position: relative; overflow: hidden; }
 .step-card::before { content: ''; position: absolute; top: 0; left: 0; right: 0; height: 2px; background: var(--accent-gradient); opacity: 0; transition: opacity 0.4s; }
 .step-card:hover { background: var(--bg-card-hover); border-color: var(--border-hover); transform: translateY(-4px); }
@@ -188,14 +188,14 @@ section { position: relative; z-index: 1; padding: 64px 0; }
 .step-card p { font-size: 0.92rem; color: var(--text-secondary); line-height: 1.7; }
 
 /* === METRICS RIBBON === */
-.metrics { position: relative; z-index: 1; padding: 80px 0; border-top: 1px solid var(--border); border-bottom: 1px solid var(--border); }
+.metrics { position: relative; z-index: 1; padding: 56px 0; border-top: 1px solid var(--border); border-bottom: 1px solid var(--border); }
 .metrics-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 32px; }
 .metric-item { text-align: center; }
 .metric-value { font-family: var(--font-display); font-size: clamp(2.2rem, 3.5vw, 3rem); font-weight: 800; letter-spacing: -0.03em; margin-bottom: 6px; }
 .metric-label { font-size: 0.82rem; color: var(--text-muted); letter-spacing: 0.02em; }
 
 /* === TESTIMONIALS === */
-.testimonials-wrapper { margin-top: 64px; overflow: hidden; mask-image: linear-gradient(90deg, transparent 0%, black 5%, black 95%, transparent 100%); }
+.testimonials-wrapper { margin-top: 28px; overflow: hidden; mask-image: linear-gradient(90deg, transparent 0%, black 5%, black 95%, transparent 100%); }
 .testimonials-track { display: flex; gap: 24px; animation: testimonialsScroll 45s linear infinite; width: max-content; }
 .testimonials-track:hover { animation-play-state: paused; }
 @keyframes testimonialsScroll { 0% { transform: translateX(0); } 100% { transform: translateX(-50%); } }
@@ -213,7 +213,7 @@ section { position: relative; z-index: 1; padding: 64px 0; }
 
 /* === CONSULTING === */
 .consulting-section { background: linear-gradient(180deg, var(--bg-primary) 0%, var(--bg-secondary) 100%); }
-.consulting-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 80px; align-items: center; margin-top: 64px; }
+.consulting-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 48px; align-items: center; margin-top: 28px; }
 .consulting-content h2 { font-family: var(--font-display); font-size: clamp(1.8rem, 3vw, 2.5rem); font-weight: 800; letter-spacing: -0.03em; line-height: 1.15; margin-bottom: 20px; }
 .consulting-content > p { font-size: 1rem; color: var(--text-secondary); line-height: 1.75; margin-bottom: 36px; }
 
@@ -235,7 +235,7 @@ section { position: relative; z-index: 1; padding: 64px 0; }
 .audit-total .value { font-family: var(--font-display); font-size: 1.6rem; font-weight: 800; color: var(--accent-2); }
 
 /* === SERVICE CARDS === */
-.services-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 24px; margin-top: 64px; }
+.services-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 24px; margin-top: 28px; }
 .service-card { padding: 36px 28px; background: var(--bg-card); border: 1px solid var(--border); border-radius: 20px; transition: all 0.4s cubic-bezier(0.16, 1, 0.3, 1); position: relative; }
 .service-card:hover { background: var(--bg-card-hover); border-color: var(--border-hover); transform: translateY(-4px); }
 .service-icon { width: 48px; height: 48px; border-radius: 14px; background: rgba(79,143,255,0.08); border: 1px solid rgba(79,143,255,0.12); display: flex; align-items: center; justify-content: center; font-size: 1.3rem; margin-bottom: 20px; }
@@ -243,7 +243,9 @@ section { position: relative; z-index: 1; padding: 64px 0; }
 .service-card p { font-size: 0.85rem; color: var(--text-secondary); line-height: 1.7; }
 
 /* === PRICING CARDS === */
-.pricing-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 24px; margin-top: 64px; }
+.pricing-grid { display: grid; grid-template-columns: repeat(3, 1fr); gap: 24px; margin-top: 28px; }
+.pricing-note { margin-bottom: 4px; }
+.pricing-card .btn-primary { margin-top: auto; }
 .pricing-card { padding: 40px 32px; background: var(--bg-card); border: 1px solid var(--border); border-radius: 20px; transition: all 0.4s; position: relative; overflow: hidden; display: flex; flex-direction: column; }
 .pricing-card.featured { border-color: rgba(79,143,255,0.3); background: rgba(79,143,255,0.04); }
 .pricing-card.featured::before { content: ''; position: absolute; top: 0; left: 0; right: 0; height: 3px; background: var(--accent-gradient); }
@@ -272,7 +274,7 @@ section { position: relative; z-index: 1; padding: 64px 0; }
 .pf-text p { font-size: 0.8rem; color: var(--text-muted); line-height: 1.5; }
 
 /* === INFRASTRUCTURE === */
-.infra-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 80px; align-items: center; margin-top: 64px; }
+.infra-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 48px; align-items: center; margin-top: 28px; }
 .infra-stat-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 16px; margin-top: 32px; }
 .infra-stat { padding: 24px; background: var(--bg-card); border: 1px solid var(--border); border-radius: 16px; }
 .infra-stat .value { font-family: var(--font-display); font-size: 1.8rem; font-weight: 800; letter-spacing: -0.02em; }
@@ -280,7 +282,7 @@ section { position: relative; z-index: 1; padding: 64px 0; }
 
 /* === URGENCY === */
 .urgency-section { background: var(--bg-secondary); border-top: 1px solid var(--border); border-bottom: 1px solid var(--border); }
-.urgency-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 64px; margin-top: 48px; }
+.urgency-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 40px; margin-top: 48px; }
 .urgency-col h3 { font-family: var(--font-display); font-size: 1.5rem; font-weight: 800; margin-bottom: 24px; letter-spacing: -0.02em; }
 .urgency-item { padding: 20px 0; border-bottom: 1px solid var(--border); }
 .urgency-item:last-child { border-bottom: none; }
@@ -302,14 +304,14 @@ section { position: relative; z-index: 1; padding: 64px 0; }
 .industry-card .ic-metrics { display: flex; gap: 24px; padding-top: 20px; border-top: 1px solid var(--border); }
 
 /* === CTA SECTION === */
-.cta-section { text-align: center; padding: 72px 0; }
-.cta-section .section-title { max-width: 700px; margin: 0 auto 20px; }
-.cta-section .section-desc { margin: 0 auto 48px; text-align: center; max-width: 560px; }
+.cta-section { text-align: center; padding: 48px 0; }
+.cta-section .section-title {  max-width: 900px; margin: 0 auto 20px; }
+.cta-section .section-desc { margin: 0 auto 32px; text-align: center; max-width: 720px; }
 .cta-buttons { display: flex; align-items: center; justify-content: center; gap: 16px; flex-wrap: wrap; }
 .cta-section .cta-note { margin-top: 20px; font-size: 0.78rem; color: var(--text-muted); }
 
 /* === ACCORDION === */
-.accordion { display: flex; flex-direction: column; gap: 12px; max-width: 800px; margin: 0 auto; }
+.accordion { display: flex; flex-direction: column; gap: 12px; max-width: 920px; margin: 0 auto; }
 .accordion-item { background: var(--bg-card); border: 1px solid var(--border); border-radius: 16px; overflow: hidden; transition: all 0.3s; }
 .accordion-item:hover { border-color: var(--border-hover); }
 .accordion-item.active { border-color: rgba(79,143,255,0.2); background: rgba(79,143,255,0.03); }
@@ -353,6 +355,13 @@ footer { position: relative; z-index: 1; padding: 80px 0 40px; border-top: 1px s
 .reveal-delay-4 { transition-delay: 0.4s; }
 .reveal-delay-5 { transition-delay: 0.5s; }
 
+/* === NEW GRID CLASSES === */
+.cycle-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 20px; max-width: 1000px; margin: 0 auto; }
+.join-grid { display: grid; grid-template-columns: 1.2fr 0.8fr; gap: 48px; align-items: start; }
+.industries-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 24px; }
+.industry-inner-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 48px; align-items: center; }
+.careers-comp-grid { display: grid; grid-template-columns: repeat(4, 1fr); gap: 24px; margin-top: 28px; }
+
 /* === RESPONSIVE === */
 @media (max-width: 1024px) {
   .hero-inner { grid-template-columns: 1fr; gap: 48px; }
@@ -360,18 +369,24 @@ footer { position: relative; z-index: 1; padding: 80px 0 40px; border-top: 1px s
   .dashboard-mockup { max-width: 480px; margin: 0 auto; }
   .steps-grid { grid-template-columns: 1fr; }
   .consulting-grid { grid-template-columns: 1fr; }
-  .pricing-grid { grid-template-columns: 1fr; }
+  .pricing-grid { grid-template-columns: 1fr 1fr !important; }
   .services-grid { grid-template-columns: 1fr 1fr; }
   .infra-grid { grid-template-columns: 1fr; }
   .urgency-grid { grid-template-columns: 1fr; }
   .footer-grid { grid-template-columns: 1fr 1fr; gap: 32px; }
   .metrics-grid { grid-template-columns: repeat(2, 1fr); gap: 24px; }
   .platform-features { grid-template-columns: 1fr; }
+  .cycle-grid { grid-template-columns: 1fr 1fr; gap: 16px; }
+  .cycle-arrow { display: none; }
+  .join-grid { grid-template-columns: 1fr; gap: 32px; }
+  .industries-grid { grid-template-columns: 1fr; }
+  .industry-inner-grid { grid-template-columns: 1fr; gap: 24px; }
+  .careers-comp-grid { grid-template-columns: 1fr 1fr; }
 }
 
 @media (max-width: 768px) {
   .container { padding: 0 20px; }
-  section { padding: 48px 0; }
+  section { padding: 28px 0; }
   .nav-links {
     display: none; position: absolute; top: 100%; left: 0; right: 0;
     flex-direction: column; padding: 24px 20px; gap: 0;
@@ -388,10 +403,39 @@ footer { position: relative; z-index: 1; padding: 80px 0 40px; border-top: 1px s
   .btn-primary, .btn-secondary { width: 100%; justify-content: center; }
   .testimonial-card { flex: 0 0 320px; }
   .services-grid { grid-template-columns: 1fr; }
+  .pricing-grid { grid-template-columns: 1fr !important; }
   .footer-grid { grid-template-columns: 1fr; }
   .footer-bottom { flex-direction: column; gap: 12px; text-align: center; }
   .float-card { display: none; }
   .page-hero { padding: 120px 0 36px; min-height: auto; }
+  .cycle-grid { grid-template-columns: 1fr; gap: 12px; }
+  .cycle-arrow { display: none; }
+  .join-grid { grid-template-columns: 1fr; gap: 24px; }
+  .industries-grid { grid-template-columns: 1fr; }
+  .industry-inner-grid { grid-template-columns: 1fr; gap: 20px; }
+  .careers-comp-grid { grid-template-columns: 1fr; }
+  .section-title { font-size: clamp(1.5rem, 5vw, 2rem) !important; }
+  .hero h1 { font-size: clamp(1.8rem, 6vw, 2.4rem) !important; }
+  .page-hero h1 { font-size: clamp(1.8rem, 6vw, 2.4rem) !important; }
+  .metrics-grid { grid-template-columns: 1fr 1fr; gap: 16px; }
+  .hero-desc, .page-hero-desc { font-size: 0.9rem; }
+}
+@media (max-width: 480px) {
+  .container { padding: 0 16px; }
+  section { padding: 24px 0; }
+  .hero { padding: 100px 0 28px; }
+  .page-hero { padding: 100px 0 28px; }
+  .hero h1 { font-size: 1.7rem !important; }
+  .page-hero h1 { font-size: 1.7rem !important; }
+  .section-title { font-size: 1.35rem !important; }
+  .metrics-grid { grid-template-columns: 1fr; gap: 12px; }
+  .testimonial-card { flex: 0 0 280px; padding: 24px; }
+  .pricing-card { padding: 28px 24px; }
+  .step-card { padding: 24px; }
+  .service-card { padding: 24px; }
+  .btn-primary, .btn-secondary { padding: 14px 24px; font-size: 0.88rem; }
+  .nav { padding: 14px 0; }
+  .nav .container { padding: 0 16px; }
 }
 
 
@@ -424,7 +468,7 @@ footer { position: relative; z-index: 1; padding: 80px 0 40px; border-top: 1px s
 <div class="page-hero centered">
   <div class="container">
     <div class="hero-badge reveal"><span class="dot"></span>Help Center</div>
-    <h1>Frequently asked<br><span class="gradient-text">questions.</span></h1>
+    <h1>Frequently asked <span class="gradient-text">questions.</span></h1>
     <p class="hero-desc">Everything you need to know about working with Infiniti Payments.</p>
   </div>
 </div>
@@ -433,7 +477,7 @@ footer { position: relative; z-index: 1; padding: 80px 0 40px; border-top: 1px s
   <div class="container">
     <div class="reveal" style="text-align:center;margin-bottom:48px;">
       <div class="section-label" style="justify-content:center;">General</div>
-      <div class="section-title">About Infiniti<br><span class="gradient-text">Payments.</span></div>
+      <div class="section-title">About Infiniti <span class="gradient-text">Payments.</span></div>
     </div>
     <div class="accordion reveal">
       <div class="accordion-item"><button class="accordion-trigger">What types of businesses do you work with?<span class="icon">+</span></button><div class="accordion-content"><div class="accordion-content-inner">We work with businesses of all sizes and industries — from local restaurants and retail shops to large e-commerce brands and multi-location enterprises. If you accept credit or debit card payments, we can help. Our sweet spot is businesses processing $50K+ per month, where the savings potential is significant.</div></div></div>
@@ -450,7 +494,7 @@ footer { position: relative; z-index: 1; padding: 80px 0 40px; border-top: 1px s
   <div class="container">
     <div class="reveal" style="text-align:center;margin-bottom:48px;">
       <div class="section-label" style="justify-content:center;">Dual Pricing</div>
-      <div class="section-title">About our<br><span class="gradient-text">dual pricing program.</span></div>
+      <div class="section-title">About our <span class="gradient-text">dual pricing program.</span></div>
     </div>
     <div class="accordion reveal">
       <div class="accordion-item"><button class="accordion-trigger">What is dual pricing?<span class="icon">+</span></button><div class="accordion-content"><div class="accordion-content-inner">Dual pricing displays two prices for every item — a card price and a cash price. The cash price is lower because it doesn't include processing fees. This is fully legal and compliant in all 50 states. It's different from surcharging because both prices are clearly displayed upfront. Customers choose their preferred payment method, and businesses offset 100% of their processing costs.</div></div></div>
@@ -467,7 +511,7 @@ footer { position: relative; z-index: 1; padding: 80px 0 40px; border-top: 1px s
 <section class="cta-section" style="border-top:1px solid var(--border);">
   <div class="container"><div class="reveal">
     <div class="section-label" style="justify-content:center;">Still have questions?</div>
-    <div class="section-title">Let's talk.<br><span class="gradient-text">We're here to help.</span></div>
+    <div class="section-title">Let's talk. <span class="gradient-text">We're here to help.</span></div>
     <div class="section-desc">Can't find what you're looking for? Reach out directly and a real human will get back to you.</div>
     <div class="cta-buttons">
       <a href="/join" class="btn-primary btn-lg">Get Your Free Audit →</a>
